--- a/openrec.html
+++ b/openrec.html
@@ -117,7 +117,7 @@ input[type="button"][disabled], button[disabled] {
 <div>
 <br>
 ●まず以下のリンクをブラウザーのブックマークバーなどへドラッグして、ブックマークレットを登録してください。<br>
-【 <a href="javascript:var adata=[{groupId:22,id:633,imageUrl:&quot;https://dqd0jw5gvbchn.cloudfront.net/stamp/22/128/d1f790581fe20e9dee537f194cf66aafbb2775ea.png&quot;},{groupId:25,id:735,imageUrl:&quot;https://dqd0jw5gvbchn.cloudfront.net/stamp/25/128/d7f765bf34de260ccc3538f8e9412ee4b3935828.png&quot;}];var key=&quot;&quot;;for(var i=0;i&lt;localStorage.length;i++){if(localStorage.key(i).substring(0,&quot;or:stamp-histories&quot;.length)===&quot;or:stamp-histories&quot;){var h=JSON.parse(localStorage[(key=localStorage.key(i))]);break;}}if(key===&quot;&quot;){alert(&quot;失敗…&quot;);}else{for(var idx in adata){for(var i=0;i&lt;h.length;i++){if(h[i][&quot;id&quot;]===adata[idx][&quot;id&quot;]){h.splice(i,1);break;}}h.unshift(adata[idx]);}localStorage.setItem(key,JSON.stringify(h));}">motiko modottekoi!</a> 】<br>
+【 <a target="_blank" href="javascript:var adata=[{groupId:22,id:633,imageUrl:&quot;https://dqd0jw5gvbchn.cloudfront.net/stamp/22/128/d1f790581fe20e9dee537f194cf66aafbb2775ea.png&quot;},{groupId:25,id:735,imageUrl:&quot;https://dqd0jw5gvbchn.cloudfront.net/stamp/25/128/d7f765bf34de260ccc3538f8e9412ee4b3935828.png&quot;}];var key=&quot;&quot;;for(var i=0;i&lt;localStorage.length;i++){if(localStorage.key(i).substring(0,&quot;or:stamp-histories&quot;.length)===&quot;or:stamp-histories&quot;){var h=JSON.parse(localStorage[(key=localStorage.key(i))]);break;}}if(key===&quot;&quot;){alert(&quot;失敗…&quot;);}else{for(var idx in adata){for(var i=0;i&lt;h.length;i++){if(h[i][&quot;id&quot;]===adata[idx][&quot;id&quot;]){h.splice(i,1);break;}}h.unshift(adata[idx]);}localStorage.setItem(key,JSON.stringify(h));}">motiko modottekoi!</a> 】<br>
 <br>
 ※Google Chromeの場合こんな感じ。あらかじめブックマークバーを表示する設定にしておく必要あり。<br>
 <img src="img/openrec1.1.png" style="border:1px solid black;"><br>
@@ -129,7 +129,7 @@ input[type="button"][disabled], button[disabled] {
 <br>
 ●先ほど登録したブックマークを呼び出します。（実行するのはOPENRECトップページでOK。なお実行しても見た目上なにも起こりません）<br>
 <img src="img/openrec1.2.png" style="border:1px solid black;"><br>
-※注意：スタンプ履歴が1個もない状態では「失敗…」と表示されてうまく行きません。どこか待機所あたりで、どれでもいいのでスタンプを1回送信してからもう一度試してください。<br>
+※注意：スタンプ履歴が1個もない状態では「失敗…」と表示されてうまく行きません。どこか待機所あたりで、どれでもいいのでスタンプを1回送信してから再度試してください。<br>
 <br>
 <br>
 ●以上で手順終了です。成功していればチャットのスタンプ履歴の先頭に、もちこスタンプが出現しています。<br>
@@ -138,6 +138,11 @@ before<br>
 <img src="img/openrec1.3.png" style="border:1px solid black;"><br>
 after<br>
 <img src="img/openrec1.4.png" style="border:1px solid black;"><br>
+<br>
+<br>
+<span style="font-weight:bold;">※その他注意事項</span><br>
+・OPENRECプレミアム会員でログインしている必要があります。<br>
+・スタンプ履歴が最大何個か知らないので、既にたくさん履歴がある時どのような挙動をするのかわかっておりません。<br>
 <br>
 </div>
 </div>
