--- a/openrec.html
+++ b/openrec.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>正体不明のブックマークレット（OPENREC）</title>
 <meta name="viewport" content="width=480">
+<meta content="summary" name="twitter:card" />
+<meta property="og:title" content="正体不明のブックマークレット（OPENREC）">
+<meta property="og:type" content="article">
+<meta property="og:description" content="OPENRECのスタンプ履歴へもちこスタンプを強制的に呼び戻すブックマークレット">
+<meta property="og:url" content="https://shoutaifumei.github.io/bookmarklet/openrec.html">
+<meta property="og:image" content="https://shoutaifumei.github.io/bookmarklet/img/card_openrec.png">
+<meta property="og:locale" content="ja_JP">
 <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" type="text/css">
 <style>
 .content_frame {
